--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "./node_modules/.bin/webpack -p",
     "rename-css-bower-dependencies": "find bower_components -name '*.css' | sed -e 'p;s/.css$/.scss/' | xargs -n2 mv",
     "dev": "./node_modules/.bin/webpack-dev-server --inline --hot",
-    "postinstall": "bower install",
-    "main": "./lib/index.js"
+    "postinstall": "bower install"
   },
+  "main": "./lib/index.js",
   "author": "",
   "license": "BSD",
   "devDependencies": {
