--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "lazy.js": "^0.4.0",
     "react": "^0.12.2",
     "react-drop-button": "git+https://github.com/BI/react-drop-button"
   }
