added label and test

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "lazy.js": "^0.4.0",
     "react": "^0.12.2",
-    "react-drop-button": "git+https://github.com/BI/react-drop-button"
+    "react-drop-button": "git+https://github.com/BI/react-drop-button",
+    "js-test-data": "git+https://github.com/BI/js-test-data"
   }
 }
