--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "webpack-dev-server": "^1.7.0"
   },
   "dependencies": {
+    "js-test-data": "git+https://github.com/BI/js-test-data",
     "lazy.js": "^0.4.0",
     "react": "~0.13.3",
     "react-drop-button": "git+https://github.com/BI/react-drop-button",
-    "js-test-data": "git+https://github.com/BI/js-test-data"
+    "react-sizebox": "git://github.com/BI/react-sizebox"
   }
 }
