--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-compact-multiselect",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "react-compact-multiselect",
   "scripts": {
     "test": "jest",
@@ -13,23 +13,19 @@
   "license": "BSD",
   "devDependencies": {
     "babel-core": "^6.9.0",
+    "babel-jest": "^12.1.0",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "es5-shim": "^4.5.8",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
+    "jest-cli": "^12.1.0",
     "js-test-data": "git+https://github.com/BI/js-test-data",
-    "jshint": "^2.9.2",
     "jsx-loader": "^0.13.2",
     "jsxhint": "^0.15.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack": "^1.7.0",
     "lazy.js": "^0.4.2",
     "node-sass": "^3.7.0",
-    "phantomjs-prebuilt": "^2.1.7",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
@@ -43,5 +39,12 @@
   "peerDependencies": {
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0"
+  },
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react/",
+      "<rootDir>/node_modules/react-dom/",
+      "<rootDir>/node_modules/react-addons-test-utils/"
+    ]
   }
 }
