--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "main": "./dist/react-compact-multiselect.js",
   "author": "",
   "license": "BSD",
+  "dependencies": {
+    "lazy.js": "^0.4.2",
+    "react-drop-button": "git+https://github.com/BI/react-drop-button",
+    "react-sizebox": "git+https://github.com/BI/react-sizebox"
+  },
   "devDependencies": {
     "babel-core": "^6.9.0",
     "babel-jest": "^12.1.0",
@@ -22,16 +27,10 @@
     "es5-shim": "^4.5.8",
     "jest-cli": "^12.1.0",
     "js-test-data": "git+https://github.com/BI/js-test-data",
-    "jsx-loader": "^0.13.2",
-    "jsxhint": "^0.15.1",
-    "lazy.js": "^0.4.2",
     "node-sass": "^3.7.0",
     "react": "^15.1.0",
-    "react-addons-css-transition-group": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-drop-button": "git+https://github.com/BI/react-drop-button",
-    "react-sizebox": "git+https://github.com/BI/react-sizebox",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
@@ -39,7 +38,7 @@
   },
   "peerDependencies": {
     "react": "^15.1.0",
-    "react-addons-css-transition-group": "^15.1.0"
+    "react-dom": "^15.1.0"
   },
   "jest": {
     "unmockedModulePathPatterns": [
