--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "react-compact-multiselect",
   "scripts": {
+    "pretest": "npm run build",
     "test": "jest",
     "watch-test": "jest --watch",
     "build": "NODE_ENV=production webpack -p",
