--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "BSD",
   "dependencies": {
     "lazy.js": "^0.4.2",
+    "lunr": "^1.0.0",
     "react-drop-button": "git+https://github.com/BI/react-drop-button",
     "react-sizebox": "git+https://github.com/BI/react-sizebox#v0.1"
   },
