--- a/package.json
+++ b/package.json
@@ -25,22 +25,21 @@
     "babel-polyfill": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "create-react-class": "^15.6.3",
     "css-loader": "^0.23.1",
     "es5-shim": "^4.5.8",
     "jest-cli": "^12.1.0",
     "js-test-data": "git+https://github.com/BI/js-test-data",
     "node-sass": "^3.7.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react": ">=15.1.0"
   },
   "jest": {
     "unmockedModulePathPatterns": [
